// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-tag-beta #render should render component as expected (1) 1`] = `
<gux-tag-beta>
  <!---->
  <div class="gux-tag">
    <div class="gux-default gux-tag-content">
      <div class="gux-tag-text">
        default
      </div>
    </div>
  </div>
</gux-tag-beta>
`;

exports[`gux-tag-beta #render should render component as expected (2) 1`] = `
<gux-tag-beta color="default">
  <!---->
  <div class="gux-tag">
    <div class="gux-default gux-tag-content">
      <div class="gux-tag-text">
        default (explicit)
      </div>
    </div>
  </div>
</gux-tag-beta>
`;

exports[`gux-tag-beta #render should render component as expected (3) 1`] = `
<gux-tag-beta color="navy">
  <!---->
  <div class="gux-tag">
    <div class="gux-navy gux-tag-content">
      <div class="gux-tag-text">
        navy
      </div>
    </div>
  </div>
</gux-tag-beta>
`;

exports[`gux-tag-beta #render should render component as expected (4) 1`] = `
<gux-tag-beta color="navy" icon="bolt">
  <!---->
  <div class="gux-tag">
    <div class="gux-navy gux-tag-content">
      <div class="gux-tag-icon-container">
        <gux-icon class="gux-tag-icon" decorative="" icon-name="bolt"></gux-icon>
      </div>
      <div class="gux-tag-text">
        navy
      </div>
    </div>
  </div>
</gux-tag-beta>
`;

exports[`gux-tag-beta #render should render component as expected (5) 1`] = `
<gux-tag-beta color="navy" icon="bolt" removable="" value="3">
  <!---->
  <div class="gux-tag">
    <div class="gux-navy gux-tag-content">
      <div class="gux-tag-icon-container">
        <gux-icon class="gux-tag-icon" decorative="" icon-name="bolt"></gux-icon>
      </div>
      <div class="gux-tag-text">
        navy
      </div>
    </div>
    <button class="gux-navy gux-tag-remove-button" tabindex="0" type="button">
      <gux-icon class="gux-tag-remove-icon" icon-name="ic-close" screenreader-text="Remove tag"></gux-icon>
    </button>
  </div>
</gux-tag-beta>
`;
